# RoPEFinal

./: .gitignore  CMakeLists.txt  README.md  ablation_results.csv  block_dim_results.csv  parallel_scale_results.csv  results.csv  serial_comparison.csv  test.sh  visualize_results.ipynb
benchmarks/: rope_benchmark.cpp
experiment_scripts/: block_dim_test.sh  parallel_scaling.sh  runtime_comparison.sh
include/rope/: attention.hpp  matrix.hpp  metrics.hpp  rotary_embedding.hpp
src/: attention.cpp  cuda_attention.cu  matrix.cpp  metrics.cpp  rotary_embedding.cpp
tests/: test_serial.cpp
